--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
 		<div id="gallery">
 			<img src="images/1.jpg">
+			<img src="images/12.jpeg">
 			<img src="images/2.jpg">
 			<img src="images/3.jpg">
 			<img src="images/4.jpg">
