--- a/index.html
+++ b/index.html
@@ -71,18 +71,7 @@
 	<body>
 
 		<div id="gallery">
-			<img src="images/1.jpg">
-			<img src="images/12.jpeg">
-			<img src="images/2.jpg">
-			<img src="images/3.jpg">
-			<img src="images/4.jpg">
-			<img src="images/5.jpg">
-			<img src="images/6.jpg">
-			<img src="images/7.jpg">
-			<img src="images/8.jpg">
-			<img src="images/9.jpg">
-			<img src="images/10.jpg">
-			<img src="images/11.jpg">
+			<img src="images/amru(1).jpg">
 
 		</div>
 
