--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@
 <img src="images/amru (7).jpeg">
 <img src="images/amru (8).jpeg">
 <img src="images/amru (9).jpeg">
+			
+<img src="images/name (1).jpg">
+<img src="images/name (2).jpg">
+<img src="images/name (3).jpg">
+<img src="images/name (4).jpg">
+<img src="images/name (5).jpg">
+<img src="images/name (6).jpg">
+<img src="images/name (7).jpg">
+<img src="images/name (8).jpg">
+			
 
 		</div>
 
