--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
 
 		<div id="gallery">
 
-<img src="images/amru (1).jpeg">
-<img src="images/amru (2).jpeg">
-<img src="images/amru (3).jpeg">
-<img src="images/amru (4).jpeg">
-<img src="images/amru (5).jpeg">
-<img src="images/amru (6).jpeg">
-<img src="images/amru (7).jpeg">
-<img src="images/amru (8).jpeg">
-<img src="images/amru (9).jpeg">
+<img src="images/name (1).jpeg">
+<img src="images/name (2).jpeg">
+<img src="images/name (3).jpeg">
+<img src="images/name (4).jpeg">
+<img src="images/name (5).jpeg">
+<img src="images/name (6).jpeg">
+<img src="images/name (7).jpeg">
+<img src="images/name (8).jpeg">
+<img src="images/name (9).jpeg">
 			
 <img src="images/name (1).jpg">
 <img src="images/name (2).jpg">
