--- a/index.html
+++ b/index.html
@@ -72,25 +72,42 @@
 
 		<div id="gallery">
 
-<img src="images/name (1).jpeg">
-<img src="images/name (2).jpeg">
-<img src="images/name (3).jpeg">
-<img src="images/name (4).jpeg">
-<img src="images/name (5).jpeg">
-<img src="images/name (6).jpeg">
-<img src="images/name (7).jpeg">
-<img src="images/name (8).jpeg">
-<img src="images/name (9).jpeg">
-			
-<img src="images/name (1).jpg">
-<img src="images/name (2).jpg">
-<img src="images/name (3).jpg">
-<img src="images/name (4).jpg">
-<img src="images/name (5).jpg">
-<img src="images/name (6).jpg">
-<img src="images/name (7).jpg">
-<img src="images/name (8).jpg">
-			
+
+<img src="images/sup (1).jpg">
+<img src="images/sup (2).jpg">
+<img src="images/sup (3).jpg">
+<img src="images/sup (4).jpg">
+<img src="images/sup (5).jpg">
+<img src="images/sup (6).jpg">
+<img src="images/sup (7).jpg">
+<img src="images/sup (8).jpg">
+<img src="images/sup (9).jpg">
+<img src="images/sup (10).jpg">
+<img src="images/sup (11).jpg">
+<img src="images/sup (12).jpg">
+<img src="images/sup (13).jpg">
+<img src="images/sup (14).jpg">
+<img src="images/sup (15).jpg">
+<img src="images/sup (16).jpg">
+<img src="images/sup (17).jpg">
+<img src="images/sup (18).jpg">
+<img src="images/sup (19).jpg">
+<img src="images/sup (20).jpg">
+<img src="images/sup (21).jpg">
+<img src="images/sup (22).jpg">
+<img src="images/sup (23).jpg">
+<img src="images/sup (24).jpg">
+<img src="images/sup (25).jpg">
+<img src="images/sup (26).jpg">
+<img src="images/sup (27).jpg">
+<img src="images/sup (28).jpg">
+<img src="images/sup (29).jpg">
+<img src="images/sup (30).jpg">
+<img src="images/sup (31).jpg">
+<img src="images/sup (32).jpg">
+<img src="images/sup (33).jpg">
+<img src="images/sup (34).jpg">
+<img src="images/sup (35).jpg">
 
 		</div>
 
