--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
 		</style>
 	</head>
 	<body>
-
+<audio src="/images/1.mp3" controls>
+<p>If you are reading this, it is because your browser does not support the audio element.</p>
+</audio>
 		<div id="gallery">
 
 
