--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 		</style>
 	</head>
 	<body>
-<audio src="/images/1.mp3" controls>
-<p>If you are reading this, it is because your browser does not support the audio element.</p>
-</audio>
+
 		<div id="gallery">
 
-
+<audio autoplay src="/images/1.mp3" controls>
+<p>If you are reading this, it is because your browser does not support the audio element.</p>
+</audio>
 <img src="images/sup (1).jpg">
 <img src="images/sup (2).jpg">
 <img src="images/sup (3).jpg">
