--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
 	</head>
 	<body>
 
-		<div id="gallery">
-
-<audio autoplay src="/images/1.mp3" controls>
+<audio src="/images/1.mp3" controls>
 <p>If you are reading this, it is because your browser does not support the audio element.</p>
 </audio>
+	
+		<div id="gallery">
+
 <img src="images/sup (1).jpg">
 <img src="images/sup (2).jpg">
 <img src="images/sup (3).jpg">
