--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 	
 		<div id="gallery">
 
+<img src="images/main.png">
 <img src="images/sup (1).jpg">
 <img src="images/sup (2).jpg">
 <img src="images/sup (3).jpg">
