--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 <img src="images/sup (4).jpg">
 <img src="images/sup (5).jpg">
 <img src="images/sup (6).jpg">
+<img src="images/amru.png">
 <img src="images/sup (7).jpg">
 <img src="images/sup (8).jpg">
 <img src="images/sup (9).jpg">
@@ -90,6 +91,7 @@
 <img src="images/sup (11).jpg">
 <img src="images/sup (12).jpg">
 <img src="images/sup (13).jpg">
+<img src="images/amru.png">
 <img src="images/sup (14).jpg">
 <img src="images/sup (15).jpg">
 <img src="images/sup (16).jpg">
@@ -105,6 +107,7 @@
 <img src="images/sup (26).jpg">
 <img src="images/sup (27).jpg">
 <img src="images/sup (28).jpg">
+<img src="images/amru.png">
 <img src="images/sup (29).jpg">
 <img src="images/sup (30).jpg">
 <img src="images/sup (31).jpg">
@@ -112,6 +115,7 @@
 <img src="images/sup (33).jpg">
 <img src="images/sup (34).jpg">
 <img src="images/sup (35).jpg">
+<img src="images/love.png">
 
 		</div>
 
